# Pub-Xel

./: .gitignore  AGENTS.md  LICENSE.txt  Pub-Xel.py  README.md  about.ui  build.ps1  build_local.ps1  build_temp.ps1  combine_journal_data.py  excel_check_file_exist.py  excel_input_pubmed_data.py  inspect.ui  logo.icns  main.ui  mainfunctions.py  preferences.ui  pubsheet.xlsx  pubxel.py  pyproject.toml  readme.txt  requirements.txt  settingsdefault.json  setup.iss  version_info.txt  welcome.py
.github/workflows/: smoke.yml  (+3 more)
data/: impactfactor2022.txt  impactfactor2023.txt  journal_combined_2.txt  journal_combined_2025.txt  latest.json  pubsheet.xlsx  pubsheet_all_columns.xlsx  pubsheet_generated_test.xlsx  pubsheet_generated_test_v2.xlsx  pubsheet_no_columns.xlsx  pubsheetinitial.xlsx  settingsdefault.json  version.py
pubxel_core/: __init__.py  app.py  clipboard.py  excel_ops.py  ids.py  mainfunctions.py  metadata_store.py  nbib.py  paths.py  pubmed.py  recent_worksheets.py  runtime.py  settings.py  update.py  welcome.py  worksheet_builder.py  worksheet_defaults.py  worksheet_export.py
scripts/: extract_ui.py  make_new_worksheet.py  preview_drive_tab.py  smoke_imports.py  sync_wiki.ps1  sync_wiki.py
ui/: about.ui  drive_tab.ui  inspect.ui  main.ui  preferences.ui  worksheetColumns.ui
wiki/: Clipboard-Actions.md  Excel-Actions.md  FAQ-and-Troubleshooting.md  Getting-Started.md  Global-Hotkeys.md  Home.md  Importing-nbib-Files.md  Inspect-Window.md  Installation.md  Preferences-and-Libraries.md  Pub-Xel-Worksheet.md  README.md  Supplementary-Files.md  _Sidebar.md
(+8 files in other folders)
