[project]
name = "pub-xel"
version = "0.0.0"
description = "Biomedical reference management for Excel and PubMed"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PyQt6",
    "xlwings",
    "pynput",
    "requests",
    "beautifulsoup4",
]

[project.optional-dependencies]
dev = ["ruff>=0.4"]

[tool.ruff]
target-version = "py310"
line-length = 120
exclude = ["build", "dist", "Output", "scripts/extract_ui.py"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = [
    "E501",  # line length (legacy UI modules)
]

[tool.ruff.lint.per-file-ignores]
"pubxel_core/ui/*" = ["E501", "F841"]
